# Millikan-Oil-Drop-Experiment-Utility

./: .gitignore  README.md  pyproject.toml
data/: data_table.txt  data_table_tex.txt  trials.json
src/millikan/: __init__.py  analysis.py  cli.py  io.py  models.py  plotting.py  terminal.py
src/millikan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
